Flipping black and white to align with USOA recommendation Fixes #17

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -32,6 +32,10 @@ tr.odd {
 	vertical-align: middle;
 }
 
+.border-right {
+	border-right: 1px solid #ddd;
+}
+
 .color-box {
     width: 10px;
     height: 10px;
